force-app/main/default/objects/maps__LiveAsset__c/maps__LiveAsset__c.object-meta.xml
<CustomObject>
    <description>Any asset that a device can be associated with i.e. a truck, car or dumpster</description>
    <label>Maps Live Asset</label>
    <nameField>
        <label>Maps Live Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>