force-app/main/default/objects/maps__LiveAsset__c/fields/maps__Active__c.field-meta.xml
<CustomField>
    <fullName>maps__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is the Asset currently an active inventory/fleet item?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>