force-app/main/default/objects/maps__LiveAsset__c/fields/maps__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerKm__c</fullName>
    <description>Last available odometer reading, in kilometers</description>
    <inlineHelpText>Last available odometer reading, in kilometers</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>