force-app/main/default/objects/maps__LiveAsset__c/fields/maps__Type__c.field-meta.xml
<CustomField>
    <fullName>maps__Type__c</fullName>
    <inlineHelpText>Type of asset, Vehicle or Non Vehicle etc.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Other Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>