force-app/main/default/objects/maps__LiveAsset__c/fields/maps__Year__c.field-meta.xml
<CustomField>
    <fullName>maps__Year__c</fullName>
    <inlineHelpText>The year of make/model of asset.</inlineHelpText>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>